Configure surefire to suppress undertow's illegal access warning