@@ -220,7 +220,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version> <!-- Newer version do not yet work with Java 11 -->
+                <!-- Newer version do not yet work with Java 11 -->
+                <version>2.20</version>
+                <!-- workaround for: https://issues.jboss.org/browse/UNDERTOW-1355 -->
+                <configuration>
+                    <argLine>
+                        --illegal-access=deny
+                        -Xmx1500m
+                    </argLine>
+                </configuration>
             </plugin>
 
             <plugin>
